menambahkan beberapa model dan controller
